# pokerApiClient

./: SharkScope WS API.doc  config.py  kenny_tornaments.json  kennystat.json  main.py  pyproject.toml  tour.json  tournament_response.json  tournaments.csv
src/: collector.py  sharkscope.py  utils.py
src/predicters/: ability_predictor.py  rank_predictor.py  simple_rank_predictor.py
