[tool.poetry]
name = "pokerapiclient"
version = "0.1.0"
description = ""
authors = ["Dron <a.chiglincev@dc.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
pandas = "^1.5.3"
prettytable = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
